--- a/app.css
+++ b/app.css
@@ -840,13 +840,13 @@ TEST YOUR DESIGN
     width: 2.5em;
     height: 2.5em;
     z-index: 1;
-    font-size: 1.04em;
+    font-size: 0.78em;
     color: var(--frkayellow)!important;
     text-decoration: none;
     right: 0.52em;
     cursor: pointer;
     background-color: var(--frkablack)!important;
-    padding: 2px 10px;
+    padding-top: 0.3em;
     border-radius: 100%;
     display: flex;
     justify-content: center;
