--- a/app.css
+++ b/app.css
@@ -1022,52 +1022,52 @@ CROPPER STYLING
 .cropper-point {
   background-color: var(--frkablack)!important;
   height: 8px!important;
-  opacity: 1; 
+  opacity: 1!important; 
   width: 8px!important;
 }
 
 .cropper-modal {
   background-color: var(--frkayellow)!important;
-  opacity: .8
+  opacity: .8!important;
 }
 
 .cropper-point.point-nw {
-  left: -4px;
-  top: -4px;
+  left: -4px!important;
+  top: -4px!important;
 }
 
 .cropper-point.point-sw {
-  bottom: -4px;
-  left: -4px;
+  bottom: -4px!important;
+  left: -4px!important;
 }
 
 .cropper-point.point-se {
-  bottom: -4px;
-  right: -4px;
+  bottom: -4px!important;
+  right: -4px!important;
 }
 
 .cropper-point.point-s {
-  bottom: -4px;
-  margin-left: -4px;
+  bottom: -4px!important;
+  margin-left: -4px!important;
 }
 
 .cropper-point.point-w {
-  left: -4px;
-  margin-top: -4px;
+  left: -4px!important;
+  margin-top: -4px!important;
 }
 
 .cropper-point.point-n {
-  margin-left: -4px;
-  top: -4px;
+  margin-left: -4px!important;
+  top: -4px!important;
 }
 
 .cropper-point.point-e {
-  margin-top: -4px;
-  right: -4px;
+  margin-top: -4px!important;
+  right: -4px!important;
 }
 
 .img_container {
-  max-height: 13.5em;
+  max-height: 13.5em!important;
 
 }
 /*
