--- a/app.css
+++ b/app.css
@@ -942,12 +942,12 @@ FILEPOND STYLING
 
 /* the border radius of the drop area and file item */
 .filepond--panel-root, .filepond--item-panel {
-  border-radius: 0em!important;
+  border-radius: 0.5px!important;
 }
 
 /* the background color of the file and file panel (used when dropping an image) */
 .filepond--item-panel {
-  background-color: var(--frkayellow)!important;
+  background-color: var(--frkablack)!important;
  
 }
 
@@ -969,7 +969,10 @@ FILEPOND STYLING
 /* the color of the focus ring */
 .filepond--file-action-button:hover,
 .filepond--file-action-button:focus {
-  box-shadow: 0 0 0 0.125em rgba(244,221,84,0.9)!important;
+  color: var(--frkayellow)!important;
+ 
+
+ /*  box-shadow: 0 0 0 0.125em rgba(244,221,84,0.9)!important; */
 }
 
 /* the text color of the file status and info labels */
