--- a/app.css
+++ b/app.css
@@ -969,10 +969,8 @@ FILEPOND STYLING
 /* the color of the focus ring */
 .filepond--file-action-button:hover,
 .filepond--file-action-button:focus {
-  color: var(--frkayellow)!important;
- 
-
- /*  box-shadow: 0 0 0 0.125em rgba(244,221,84,0.9)!important; */
+  background-color: var(--frkayellow)!important;
+  box-shadow: 0 0 0 0em rgba(244,221,84,0)!important; 
 }
 
 /* the text color of the file status and info labels */
