--- a/app.css
+++ b/app.css
@@ -1080,6 +1080,24 @@ CROPPER STYLING
   max-height: 13.5em!important;
 
 } 
+
+
+/*
+================================================================================
+LOCATION SOLO TABS
+================================================================================
+*/
+
+
+.slider {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background: #1bb1a5;
+    height: 2px;
+}
+
+
 /*
 ================================================================================
 PRINTTHIS PLUGIN STYLING
