--- a/app.css
+++ b/app.css
@@ -1011,6 +1011,10 @@ margin-bottom: 2em;
   margin-top: 0.3em!important;
 }
 
+
+video {
+  width: 100%;
+}
 /*
 ================================================================================
 CROPPER STYLING
