--- a/app.css
+++ b/app.css
@@ -580,9 +580,9 @@ SPLIDE CSS
 	opacity: 0;
 }
 
-.splide__arrow.splide__arrow--next, .splide__arrow.splide__arrow--prev, .splide__pagination {
+/* .splide__arrow.splide__arrow--next, .splide__arrow.splide__arrow--prev, .splide__pagination {
 	display: none;
-}
+} */
 
 .splide *:focus { outline: none; }
 
