--- a/app.css
+++ b/app.css
@@ -72,6 +72,22 @@ a {
 
 /*
 ================================================================================
+DISABLE MOBILE LANDSCAPE
+================================================================================
+*/
+
+@media only screen and (orientation:landscape){
+  #hidden{ display:block; }
+  #show{ display:none; }
+}
+@media only screen and (orientation:portrait){
+  #hidden{ display:none; }
+  #show{ display:block; }
+}
+
+
+/*
+================================================================================
 LOADER
 ================================================================================
 */
