--- a/app.css
+++ b/app.css
@@ -75,8 +75,14 @@ a {
 DISABLE MOBILE LANDSCAPE
 ================================================================================
 */
+@media only screen and (orientation:portrait){
+  body {
+    height: 100vw;
+    transform: rotate(90deg);
+  }
+}
 
-@media only screen and (orientation:landscape){
+/* @media only screen and (orientation:landscape){
   .hidden{ display:block; }
   .show{ display:none; }
 }
@@ -84,7 +90,7 @@ DISABLE MOBILE LANDSCAPE
   .hidden{ display:none; }
   .show{ display:block; }
 }
-
+ */
 
 /*
 ================================================================================
