--- a/app.css
+++ b/app.css
@@ -75,7 +75,7 @@ a {
 DISABLE MOBILE LANDSCAPE
 ================================================================================
 */
-@media only screen and (orientation:landscape){
+@media only screen and (orientation:portrait){
   body {
     height: 100vw;
     transform: rotate(90deg);
