--- a/app.css
+++ b/app.css
@@ -75,10 +75,10 @@ a {
 DISABLE MOBILE LANDSCAPE
 ================================================================================
 */
-@media only screen and (orientation:portrait){
+@media only screen and (orientation:landscape){
   body {
     height: 100vw;
-    transform: rotate(90deg);
+    transform: rotate(-90deg);
   }
 }
 
