--- a/vendor.css
+++ b/vendor.css
@@ -201,6 +201,12 @@
     color: #231f20
 }
 
+
+#sorto {
+    height:10px;
+}
+
+
 .select2-container--default .select2-selection--single .select2-selection__arrow {
 
 
