--- a/app.css
+++ b/app.css
@@ -33,6 +33,16 @@ DEFINE ROOT VARIABLES / definiraj svoje
   --loader-width: 100vw;
   --loader-height: 5em;
 }
+/*
+================================================================================
+KILL OUTLINE ON ALL
+================================================================================
+*/
+
+*:focus {
+  outline: none;
+}
+
 
 /*
 ================================================================================
