--- a/app.css
+++ b/app.css
@@ -1263,3 +1263,12 @@ SHUFFLE.js
   z-index: -1;
   opacity: 0;
 }
+
+
+
+@media (max-width: 479px) {
+  .webinar-posts__event-item {
+    width: 100%!important;
+     }
+  }
+
