--- a/app.css
+++ b/app.css
@@ -1087,6 +1087,10 @@ video {
   width: 100%;
 }
 
+.vizsim-txt, .close-x-icon {
+user-select:none;
+}
+
 /*
 ================================================================================
 VIDEO PREVIEW CSS
