--- a/app.css
+++ b/app.css
@@ -1410,4 +1410,13 @@ SHUFFLE.js
  
   }
 
- 
+
+/*
+================================================================================
+ZOOM IMAGE CURSOR
+================================================================================
+*/
+  .demo-image {
+    cursor: url("https://uploads-ssl.webflow.com/6061fc4a0ad1c29787bd162c/60dc69289d7b776bb9ec5ab0_close-fullscreen.svg") 64 64, auto; 
+  
+  }
