--- a/app.css
+++ b/app.css
@@ -1420,3 +1420,7 @@ ZOOM IMAGE CURSOR
     cursor: url("https://uploads-ssl.webflow.com/6061fc4a0ad1c29787bd162c/60dc69289d7b776bb9ec5ab0_close-fullscreenn.svg") 64 64, auto; 
   
   }
+
+  .demo-image h1 {
+color: var(--frkayellow)!important;  
+  }
