--- a/app.css
+++ b/app.css
@@ -440,6 +440,48 @@ cursor: pointer;
   flex: 1;
 }
 
+
+/*
+================================================================================
+ACCORDION HOVER LOCO
+================================================================================
+*/
+
+.accord a {
+  display: flex;
+  flex-grow: 1;
+  text-decoration: none;
+  padding: 2em 0 1em;
+  border-bottom: 1px solid var(--frkablack);
+  color: var(--frkablack);
+  background-size: 200% 200%;
+  background-image: 
+  linear-gradient(to top, #231F20 50%, transparent 50%);
+  transition: all 0.3s cubic-bezier(.4,0,0,1);
+  }
+  
+  .accord a:hover {
+  color: var(--frkayellow);
+  background-image: 
+  linear-gradient(to top, #231F20 51%, transparent 50%);
+  background-position: 0 100%;
+  padding: 1.82em;
+  cursor: pointer;
+  }
+  
+  .accord a:pressed {
+    color: var(--frkayellow);
+    background-image: 
+    linear-gradient(to top, #ff0000 51%, transparent 50%);
+    background-position: 0 100%;
+    padding: 1.82em;
+    cursor: pointer;
+    }
+  
+ 
+
+  
+
 /*
 ================================================================================
 TXT SELECT
