--- a/app.css
+++ b/app.css
@@ -662,6 +662,26 @@ MAPBOX
   pointer-events: auto;
 }
 
+/* OVO SU PRAVI MARKERI*/
+
+.marker {
+  background-image: url('https://uploads-ssl.webflow.com/5f61cadea9ceece17b58f708/60ddd0da7732a718f693b84a_marker-editor.svg');
+  background-size: cover;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  cursor: pointer;
+  }
+  .mapboxgl-popup {
+  max-width: 200px;
+  }
+  .mapboxgl-popup-content {
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+  }
+
+  
+
 
 /* .mapboxgl-ctrl, .mapboxgl-ctrl-attrib-inner {
 display:none!important;
