--- a/app.css
+++ b/app.css
@@ -669,7 +669,7 @@ MAPBOX
   color: var(--frkablack);
   border-radius: 0.5px;
   box-shadow: 0 1px 2px rgb(0 0 0 / 10%);
-  padding: 10px 10px 15px;
+  padding: 1em 1em 1.5em;
   pointer-events: auto;
   }
 
