--- a/app.css
+++ b/app.css
@@ -664,19 +664,19 @@ MAPBOX
   }
 
   .mapboxgl-popup-content {
-  text-align: left;
+  text-align: left!important;
   position: relative;
   background: #fff;
   color: var(--frkablack);
-  border-radius: 0.5px;
+  border-radius: 0.5px!important;
   box-shadow: 0 1px 2px rgb(0 0 0 / 10%);
-  padding: 1em 1em 1.5em;
+  padding: 1em 1em 1.5em!important;
   pointer-events: auto;
   }
 
 
   .mapboxgl-popup-content h3 {
-    text-transform: uppercase;
+    text-transform: uppercase!important;
 }
   
 
