--- a/app.css
+++ b/app.css
@@ -659,14 +659,14 @@ MAPBOX
   height: 3.33em;
   cursor: pointer;
   }
- /*  .mapboxgl-popup {
+  .mapboxgl-popup {
   max-width: 200px;
   }
- */
+ 
   .mapboxgl-popup-content {
   text-align: left!important;
   position: relative;
-  background: #fff;
+  background: #FFFCF0!important;
   color: var(--frkablack);
   border-radius: 0.5px!important;
   box-shadow: 0 20px 27px rgb(0 0 0 / 20%)!important;
