--- a/app.css
+++ b/app.css
@@ -1426,6 +1426,40 @@ TIMOTHY BUTTONS
 
 /*
 ================================================================================
+VIZUAL SIMULATOR CSS
+================================================================================
+*/
+
+.wrap {
+	margin: 0 auto;
+	width: 100%;
+	height: 0;
+	padding-top: 67%; /* ratio of image * 100 */
+	overflow: hidden;
+	position: relative;
+}
+
+.mockup {
+	position: absolute;
+	top: 0;
+	-webkit-transform-origin: 0 0;
+	transform-origin: 0 0;
+}
+
+.mockup::after {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	pointer-events: none;
+}
+
+
+
+/*
+================================================================================
 SHUFFLE.js
 ================================================================================
 */
