--- a/vendor.css
+++ b/vendor.css
@@ -178,7 +178,7 @@
 .select2-container--default .select2-selection--single {
     background-color: #ffdc52;
     margin-top: 0.9em;
-    border: 1px solid #231f20; 
+    border: 2px solid #231f20; 
     border-radius: 0.5px
 }
 
@@ -233,7 +233,7 @@
     height: 100%;
     border-left-style: solid;
     border-left-width: 2px;
-    border-left-color: #F4DD54;
+    border-left-color: ##231f20;
     background: url("https://uploads-ssl.webflow.com/6061fc4a0ad1c29787bd162c/60c7101c907ce3e5f5b7cdad_arrow_down.svg") no-repeat;
     background-size: 0.79em; 
     background-position: 1.17em 2em;
