--- a/vendor.css
+++ b/vendor.css
@@ -230,10 +230,10 @@
     /* top: -3px; */
     right: 0.16em;
     width: 3em;
-    height: 100%;
+    height: 2.5em;
     border-left-style: solid;
     border-left-width: 2px;
-    border-left-color: ##231f20;
+    border-left-color: #231f20;
     background: url("https://uploads-ssl.webflow.com/6061fc4a0ad1c29787bd162c/60c7101c907ce3e5f5b7cdad_arrow_down.svg") no-repeat;
     background-size: 0.79em; 
     background-position: 1.17em 2em;
