--- a/vendor.css
+++ b/vendor.css
@@ -85,7 +85,7 @@
 
 .select2-results {
     display: block;
-    margin-top: 2px;
+    /* margin-top: 2px; */
 }
 
 .select2-results__options {
@@ -232,7 +232,7 @@
     width: 3em;
     height: 2.8em;
     border-left-style: solid;
-    border-left-width: 2px;
+    border-left-width: 1px;
     border-left-color: #231f20;
     background: url("https://uploads-ssl.webflow.com/6061fc4a0ad1c29787bd162c/60c7101c907ce3e5f5b7cdad_arrow_down.svg") no-repeat;
     background-size: 0.79em; 
@@ -275,10 +275,10 @@
     position: absolute;
     right: 0.16em;
     /* width: 2.5em; */
-    height: 100%;
+    height: 2.8em;
     border-left-style: solid;
-    border-left-width: 2px;
-    border-left-color: #F4DD54;
+    border-left-width: 21px;
+    border-left-color: #231f20;
     background-size: 0.79em; 
     height: 100%;
     background-position: 1.17em 2em;
