--- a/vendor.css
+++ b/vendor.css
@@ -278,7 +278,7 @@
     height: 2.8em;
     border-left-style: solid;
     border-left-width: 21px;
-    border-left-color: #231f20;
+    border-left-color: #ffdc52;
     background-size: 0.79em; 
     height: 100%;
     background-position: 1.17em 2em;
