--- a/vendor.css
+++ b/vendor.css
@@ -276,6 +276,7 @@
     position: absolute;
     right: 0.16em;
     width: 3em;
+    color: #231f20;
     height: 2.8em;
     border-left-style: solid;
     border-left-width: 1px;
