--- a/vendor.css
+++ b/vendor.css
@@ -182,6 +182,15 @@
     border-radius: 0.5px
 }
 
+.select2-container--default .select2-selection--single .sorte {
+    background-color: #ffdc52;
+    margin-top: 0.9em;
+    border: 3px solid #231f20!important;
+    border-radius: 0.5px;
+}
+
+
+
 .select2-container--default .select2-selection--single .select2-selection__rendered {
     color: #231f20;
         outline: none;
