--- a/vendor.css
+++ b/vendor.css
@@ -189,8 +189,8 @@ width: 2em !important;
 }
 
 .sortewrap .select2-container .selection .select2-selection.select2-selection--single {
-    width: 2em !important;
-    background-color: #ff0000;
+    width: 6em !important;
+    background-color: #ff0000 !important;
     }
 
 
