--- a/vendor.css
+++ b/vendor.css
@@ -190,7 +190,9 @@ width: 6em !important;
 
 .sortewrap .select2-container .selection .select2-selection.select2-selection--single {
     width: 6em !important;
-    background-color: #ff0000 !important;
+    background-color: #ffdc52;
+    margin-top: 0.9em;
+    border: 0px solid #231f20!important;
     }
 
 
