--- a/vendor.css
+++ b/vendor.css
@@ -197,6 +197,7 @@ width: 6em !important;
 
 .sortewrap .select2-container--default .select2-selection--single .select2-selection__arrow b {
      border-left-width: 0px!important;
+     background-position: 1.17em 1.2em!important;
     }
 
 
