--- a/vendor.css
+++ b/vendor.css
@@ -208,7 +208,7 @@ width: 6em !important;
     }
 
     .select2-sorto-result-tgd9-title {
-
+        width: 6em !important;
     }
 
 .select2-container--default .select2-selection--single .select2-selection__rendered {
