--- a/vendor.css
+++ b/vendor.css
@@ -201,7 +201,7 @@ width: 6em !important;
     }
 
     
-    .select2-container .select2-container--default .select2-container--open .select2-dropdown {
+    .sortewrap  .select2-container .select2-container--default .select2-container--open .select2-dropdown {
         background-color: #ffdc52!important;
         border: 0px solid #231f20!important;
         width: 6em !important;
