--- a/vendor.css
+++ b/vendor.css
@@ -201,7 +201,7 @@ width: 6em !important;
     }
 
     
-    .sortewrap  .select2-container .select2-dropdown {
+   .select2-container .select2-dropdown {
         background-color: #ff0000!important;
         border: 0px solid #231f20!important;
        /*  width: 6em !important; */
