--- a/vendor.css
+++ b/vendor.css
@@ -184,12 +184,12 @@
 
 
 
-.sortewrap .select2-container  {
+/* .sortewrap .select2-container  {
 width: 6em !important;
-}
+} */
 
 .sortewrap .select2-container .selection .select2-selection.select2-selection--single {
-    width: 6em !important;
+    /* width: 6em !important; */
     background-color: #ffdc52;
     margin-top: 0.9em;
     border: 0px solid #231f20!important;
