--- a/vendor.css
+++ b/vendor.css
@@ -262,7 +262,7 @@ width: 6em !important;
 
 .select2-container--default .select2-selection--single .select2-selection__arrow b {
     position: absolute;
-    top: 0.9em; 
+     top: 0.9em; 
     color: #231f20;
     right: 0.16em;
     width: 3.33em;
@@ -309,7 +309,7 @@ width: 6em !important;
     background: url("https://uploads-ssl.webflow.com/6061fc4a0ad1c29787bd162c/60df408d005bf78185cb2ee6_arrow--up.svg") no-repeat;
     /* border-color: transparent transparent #888 transparent; */
     position: absolute;
-    top: 0.9em;
+    top:0.9em
     right: 0.16em;
     width: 3.33em;
     color: #231f20;
