--- a/vendor.css
+++ b/vendor.css
@@ -243,21 +243,12 @@ width: 6em !important;
 
 
 .select2-container--default .select2-selection--single .select2-selection__arrow {
-
-
-    /* height: 2.5em; */
+    height: 2.3em; 
     position: absolute;
-    top: 0.92em;
+    top: 0.5em;
     right: 1px;
-    /* width: 2.5em; */
-    height: 100%;
-
-  /*   background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='%238C98F2'><polygon points='0,0 100,0 50,50'/></svg>") no-repeat; */
-    /* background: url("https://uploads-ssl.webflow.com/6061fc4a0ad1c29787bd162c/60c7101c907ce3e5f5b7cdad_arrow_down.svg") no-repeat; */
-    /* background-size: 20px; */
-    background-position: 1.25em 0.9em;
+    background-position: 1.25em 0.92em;
     background-repeat: no-repeat;
-    /* background-color: #efefef; */
 }
 
 .select2-container--default .select2-selection--single .select2-selection__arrow b {
@@ -309,6 +300,7 @@ width: 6em !important;
     background: url("https://uploads-ssl.webflow.com/6061fc4a0ad1c29787bd162c/60df408d005bf78185cb2ee6_arrow--up.svg") no-repeat;
     /* border-color: transparent transparent #888 transparent; */
     position: absolute;
+    top: 0.5em;
     right: 0.16em;
     width: 3.33em;
     color: #231f20;
@@ -321,6 +313,8 @@ width: 6em !important;
     background-position: 1.25em 1.55em;
     background-repeat: no-repeat;
 }
+
+t
 
 .select2-container--default .select2-selection--multiple {
     background-color: #ffdc52;
