--- a/vendor.css
+++ b/vendor.css
@@ -243,12 +243,21 @@ width: 6em !important;
 
 
 .select2-container--default .select2-selection--single .select2-selection__arrow {
+
+
     height: 2.3em; 
     position: absolute;
-    top: 0.5em;
+    top: 0.92em;
     right: 1px;
-    background-position: 1.25em 0.92em;
+    /* width: 2.5em; */
+   
+
+  /*   background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='%238C98F2'><polygon points='0,0 100,0 50,50'/></svg>") no-repeat; */
+    /* background: url("https://uploads-ssl.webflow.com/6061fc4a0ad1c29787bd162c/60c7101c907ce3e5f5b7cdad_arrow_down.svg") no-repeat; */
+    /* background-size: 20px; */
+    background-position: 1.25em 0.9em;
     background-repeat: no-repeat;
+    /* background-color: #efefef; */
 }
 
 .select2-container--default .select2-selection--single .select2-selection__arrow b {
