--- a/app.css
+++ b/app.css
@@ -1597,6 +1597,6 @@ color: var(--frkayellow)!important;
 VIZUAL SIMULATOR - VIDEO TAB ON/OFF
 ================================================================================
 */
-.tabs-li:nth-child(1) {
+.tabs-li .video {
   display:none;
 }
