--- a/app.css
+++ b/app.css
@@ -1600,3 +1600,16 @@ VIZUAL SIMULATOR - VIDEO TAB ON/OFF
 .off {
   display:none;
 }
+
+ /*
+================================================================================
+STATIC IMAGE ZA MAPU
+=========================r=======================================================
+*/
+#static {
+  background-image: url("https://api.mapbox.com/styles/v1/fogseller/ckqkw1hr4091g17sgan3bwjzp/static/16.527,44.663,6.64/600x400?access_token=pk.eyJ1IjoiZm9nc2VsbGVyIiwiYSI6ImNrN2VpbXlpbjAwNDIzbnM1N2ZhMW9laGkifQ.DUf-8r1jXF4o7ApMUcKVXQ");
+  width: 100%;
+  height: 100%;
+  grid-column: 1;
+  grid-row: 1;
+}
