--- a/app.css
+++ b/app.css
@@ -1631,3 +1631,17 @@ STATIC IMAGE ZA MAPU
   opacity: 0;
  /*  visibility: hidden; */
 }
+
+
+
+/* .current-menu-item>a::before, .nav-link.w-inline-block.w--current:before, .underline::before {
+    border-bottom: solid 3px #9b2557;
+} */
+.current-menu-item>a::before {
+    content: "";
+    border-bottom: solid 3px #9b2557;
+    position: absolute;
+    bottom: 45%;
+    left: -1.25em;
+    width: 1em;
+}
