--- a/app.css
+++ b/app.css
@@ -1725,6 +1725,6 @@ STATIC IMAGE ZA MAPU
     width: 100%!important;
 }
 
-.hero--video {
+/* .hero--video {
   overflow: hidden!important;
-}
+} */
