--- a/app.css
+++ b/app.css
@@ -1733,12 +1733,20 @@ STATIC IMAGE ZA MAPU
 /* HOME video iphone*/
 
 @media (max-width: 479px) {
+/*VIDEO HOME*/
 .bgvideo video {
 width: 100%;
 height: 100%;
 object-fit: cover;
 }
+/*FILTER LEFT FIX*/
+.webinar-posts__event-filter.filter-group.js-sort {
+  left: 0em;
 }
+
+
+}
+
 
 @media (max-width: 991px) {
   .select2-container {
