--- a/app.css
+++ b/app.css
@@ -1749,8 +1749,8 @@ object-fit: cover;
 
 }
 
+@media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait) {
 
-@media (max-width: 991px) {
   /*SELECT BOTUNI*/
   .select2-container {
   width: 15em!important;
