--- a/app.css
+++ b/app.css
@@ -1744,7 +1744,8 @@ object-fit: cover;
   left: 0em;
 }
 .select2-container {
-  width: 91.8vw!important;
+  width: 
+  91.8vw!important;
   }
 
 }
