--- a/app.css
+++ b/app.css
@@ -1750,12 +1750,27 @@ object-fit: cover;
 
 }
 
+/*IPAD VERTICAL*/
 @media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait) {
 
   /*SELECT BOTUNI*/
   .select2-container {
   width: 15em!important;
   }
+
+/*SPLIDE*/
+  .splide__slide {
+    height: 36em;
+   
+}
+
+.splide-img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+  object-fit: contain;
+}
+
   }
  
 
